feat(all): 使用 force 修改 compilerc 去除 .json 就有效了 ,但是官方文档里说是加 json有效?

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "snippettool",
   "main": "main.ts",
   "scripts": {
-    "start": "electron ."
+    "start": "tsc && electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Grewer/SnippetTool.git"
   },
   "keywords": [
+    "buildElectron",
     "react",
     "electron"
   ],
@@ -25,13 +28,50 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-hot-loader": "^4.1.0",
-    "electron": "^3.0.7",
-    "electron-prebuilt-compile": "^3.0.6",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^5.2.2",
+    "electron-prebuilt-compile": "3.0.6",
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "electron-compile": "^6.4.3",
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-hot-loader": "^4.3.11"
+  },
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {
+        "packageManager": "npm"
+      },
+      "electronWinstallerConfig": {
+        "name": "snippettool"
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": "",
+        "name": "snippettool"
+      }
+    }
   }
 }
