--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "snippettool",
   "main": "main.ts",
   "scripts": {
-    "start": "tsc && electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "start": "NODE_ENV=development electron-forge start",
+    "package": "NODE_ENV=production electron-forge package",
+    "make": "NODE_ENV=production electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Grewer/SnippetTool#readme",
   "devDependencies": {
+    "@types/electron": "^1.6.10",
     "@types/node": "^10.12.1",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
@@ -36,6 +37,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "electron": "^3.0.7",
     "electron-compile": "^6.4.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.6.0",
