--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "3.0.6",
+    "radium": "^0.25.0",
     "typescript": "^3.1.6"
   },
   "dependencies": {
