--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
-
 {
   "compilerOptions": {
     "outDir": "dist",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
@@ -17,7 +19,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "noEmit": true
+    "noEmit": true,
+    "experimentalDecorators": true
   },
   "compileOnSave": true,
   "include": [
