--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=development electron-forge start",
     "package": "NODE_ENV=production electron-forge package",
-    "make": "NODE_ENV=production electron-forge make"
+    "make": "NODE_ENV=production electron-forge make",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -43,7 +44,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-hot-loader": "^4.3.11"
+    "react-hot-loader": "^4.3.11",
+    "react-scripts": "^2.1.1"
   },
   "config": {
     "forge": {
