--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development electron-forge start",
     "package": "NODE_ENV=production electron-forge package",
-    "make": "NODE_ENV=production electron-forge make",
+    "make": "NODE_ENV=production electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,6 @@
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "3.0.6",
-    "radium": "^0.25.0",
     "typescript": "^3.1.6"
   },
   "dependencies": {
