--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/Grewer/SnippetTool#readme",
   "devDependencies": {
     "@types/electron": "^1.6.10",
-    "@types/node": "^10.12.5",
-    "@types/react": "^16.7.3",
+    "@types/node": "^10.12.1",
+    "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-hot-loader": "^4.1.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -34,6 +34,7 @@
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "3.0.6",
+    "radium": "^0.25.0",
     "typescript": "^3.1.6"
   },
   "dependencies": {
@@ -42,8 +43,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-hot-loader": "^4.3.11",
-    "react-scripts": "^2.1.1"
+    "react-hot-loader": "^4.3.11"
   },
   "config": {
     "forge": {
