--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,29 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "build",
+    "outDir": "dist",
     "module": "esnext",
     "target": "es5",
     "lib": [
-      "dom",
-      "es2015.promise",
-      "es5",
-      "es2015.iterable",
-      "es2015.generator",
-      "es2015.symbol",
-      "es7"
+      "es6",
+      "dom"
     ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
+    "rootDir": ".",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
-    "noImplicitThis": true,
+    "noImplicitThis": false,
     "noImplicitAny": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
     "noUnusedLocals": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    }
+    "noEmit": true,
+    "experimentalDecorators": true
   },
-  "exclude": [
-    "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
+  "compileOnSave": true,
+  "include": [
+    "./src/**/*"
   ]
 }
