--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "nodemon": "^1.18.7",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-hot-loader": "^4.3.11"
+    "react-hot-loader": "^4.3.11",
+    "react-markdown": "^4.0.4"
   },
   "config": {
     "forge": {
