--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "codemirror": "^5.42.0",
     "electron": "^3.0.7",
     "electron-compile": "^6.4.3",
     "electron-squirrel-startup": "^1.0.0",
