--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "electron": "^3.0.7",
     "electron-compile": "^6.4.3",
     "electron-squirrel-startup": "^1.0.0",
+    "fs": "0.0.1-security",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.7",
+    "path": "^0.12.7",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-hot-loader": "^4.3.11",
