--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "electron-compile": "^6.4.3",
     "electron-squirrel-startup": "^1.0.0",
     "fs": "0.0.1-security",
+    "lokijs": "^1.5.6",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.7",
     "path": "^0.12.7",
