--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
   "presets": [
     ["@babel/preset-env", { "targets": { "node": "12" } }],
-    "@babel/preset-typescript",
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
-  "plugins": []
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
