--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^16.9.17",
     "@types/webpack-env": "^1.14.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-root-import": "^6.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
