--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "build": "webpack -p && nodegui-packer --pack ./dist",
-    "dev": "webpack --mode=development",
+    "dev:watch": "webpack --mode=development",
     "start": "qode --inspect ./dist/index.js"
   },
   "dependencies": {
