--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-nodegui-starter",
+  "name": "snippet-tool",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Atul R <atulanand94@gmail.com>",
@@ -8,10 +8,11 @@
   "scripts": {
     "build": "webpack -p && nodegui-packer --pack ./dist",
     "dev:watch": "webpack --mode=development",
-    "start": "qode --inspect ./dist/index.js"
+    "start": "qode --inspect ./dist/index.js",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@nodegui/nodegui": "^0.13.1",
+    "@nodegui/nodegui": "^0.13.4",
     "@nodegui/os-utils": "^1.1.2",
     "@nodegui/react-nodegui": "^0.4.0",
     "@types/showdown": "^1.9.3",
@@ -24,7 +25,8 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
-    "@nodegui/packer": "^1.1.2",
+    "@nodegui/devtools": "^1.0.1",
+    "@nodegui/packer": "^1.3.0",
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/webpack-env": "^1.14.1",
