--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 registry="https://registry.npm.taobao.org"
-ELECTRON_MIRROR="https://npm.taobao.org/mirrors/electron/"
+// electron_mirror=https://npm.taobao.org/mirrors/electron/
 phantomjs_cdnurl="http://npm.taobao.org/mirrors/phantomjs"
+sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
