--- a/package.json
+++ b/package.json
@@ -9,34 +9,25 @@
     "build": "webpack -p && nodegui-packer --pack ./dist",
     "dev:watch": "webpack --mode=development",
     "start": "qode --inspect ./dist/index.js",
-    "react-devtools": "react-devtools"
+    "react-devtools": "react-devtools",
+    "dev": "webpack --mode=production"
   },
   "dependencies": {
-    "@nodegui/nodegui": "^0.13.4",
-    "@nodegui/os-utils": "^1.1.2",
-    "@nodegui/react-nodegui": "^0.4.0",
     "@types/showdown": "^1.9.3",
+    "electron-is-dev": "^1.1.0",
     "react": "^16.12.0",
     "showdown": "^1.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.7",
-    "@nodegui/devtools": "^1.0.1",
-    "@nodegui/packer": "^1.3.0",
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
-    "@types/webpack-env": "^1.14.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-root-import": "^6.4.1",
     "clean-webpack-plugin": "^3.0.0",
+    "electron": "^8.1.1",
+    "electron-debug": "^3.0.1",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "native-addon-loader": "^2.0.1",
-    "typescript": "^3.7.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
   }
