--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Grewer",
   "license": "MIT",
   "scripts": {
-    "start": "tsc src/main/index.ts && webpack-dev-server --hot --host 0.0.0.0 --mode development"
+    "start": "tsc src/main/index.ts && webpack-dev-server --hot --mode development"
   },
   "dependencies": {
     "@types/react-dom": "^16.9.5",
@@ -20,10 +20,15 @@
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "electron": "^8.1.1",
     "electron-debug": "^3.0.1",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.41.4",
