--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "start": "tsc src/main/index.ts && webpack-dev-server --hot --mode development"
   },
   "dependencies": {
-    "@types/react-dom": "^16.9.5",
-    "@types/showdown": "^1.9.3",
+    "codemirror": "^5.52.2",
     "electron-is-dev": "^1.1.0",
     "html-webpack-plugin": "^4.0.1",
+    "hypermd": "^0.3.11",
+    "marked": "^0.8.2",
     "react": "^16.12.0",
-    "react-dom": "^16.13.1",
-    "showdown": "^1.9.1"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@grew/eslint-config": "^0.1.4",
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.5",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "electron": "^8.1.1",
@@ -32,6 +33,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
+    "url-loader": "^4.0.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3"
