--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,5 @@ registry="https://registry.npm.taobao.org"
 // electron_mirror=https://npm.taobao.org/mirrors/electron/
 phantomjs_cdnurl="http://npm.taobao.org/mirrors/phantomjs"
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
+// proxy="http://127.0.0.1:7890"
+// https-proxy="http://127.0.0.1:7890"
