--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "codemirror": "^5.52.2",
+    "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^4.0.1",
     "hypermd": "^0.3.11",
     "marked": "^0.8.2",
