--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "electron-is-dev": "^1.1.0",
     "html-webpack-plugin": "^4.0.1",
     "hypermd": "^0.3.11",
+    "lokijs": "^1.5.8",
     "marked": "^0.8.2",
     "react": "^16.12.0",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@grew/eslint-config": "^0.1.4",
+    "@types/lokijs": "^1.5.3",
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.5",
