feat: 关于数据的操作

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,16 +9,19 @@
     "esModuleInterop": true,
     "importHelpers": true,
     "noImplicitAny": false,
-    "sourceMap": true,
+    "sourceMap": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "~/*": ["src/render/*"]
     }
   },
-  "include": ["**/*"]
+  "include": ["*"],
+  "exclude": [
+    "node_modules"
+  ]
 }
