--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Grewer",
   "license": "MIT",
   "scripts": {
-    "start": "tsc src/main/index.ts && webpack-dev-server --hot --mode development",
+    "start": "tsc --esModuleInterop -t ES5 src/main/index.ts && webpack-dev-server --hot --mode development",
     "dist": "webpack --mode production"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "electron": "^8.2.5",
     "electron-is-dev": "^1.1.0",
+    "fs-jetpack": "^2.3.0",
     "html-webpack-plugin": "^4.0.1",
     "hypermd": "^0.3.11",
     "lokijs": "^1.5.8",
