--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "tsc --esModuleInterop -t ES5 src/main/index.ts && webpack-dev-server --hot --mode development",
-    "dist": "webpack --mode production"
+    "dist": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "dependencies": {
     "codemirror": "^5.52.2",
