--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
       "node": true
     },
     "rules": {
-      "jsx-a11y/no-noninteractive-element-interactions": 0
+      "jsx-a11y/no-noninteractive-element-interactions": 0,
+      "jsx-a11y/click-events-have-key-events": 0,
+      "jsx-a11y/no-static-element-interactions": 0
     }
   },
   "eslintIgnore": [
