--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "marked": "^0.8.2",
     "react": "^16.12.0",
     "react-dom": "^16.13.1",
-    "shallowequal": "^1.1.0"
+    "shallowequal": "^1.1.0",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@grew/eslint-config": "^0.1.4",
@@ -30,6 +31,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.5",
     "@types/shallowequal": "^1.1.1",
+    "@types/uuid": "^8.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "electron-debug": "^3.0.1",
