--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "rules": {
       "jsx-a11y/no-noninteractive-element-interactions": 0,
       "jsx-a11y/click-events-have-key-events": 0,
-      "jsx-a11y/no-static-element-interactions": 0
+      "jsx-a11y/no-static-element-interactions": 0,
+      "no-continue": 0
     }
   },
   "eslintIgnore": [
