refactor(all): 添加 vite  运行报错暂存

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start": "tsc --esModuleInterop -t ES5 src/main/index.ts && webpack-dev-server --hot --mode development",
     "dist": "webpack --mode production",
-    "dev": "webpack --mode development"
+    "dev": "webpack --mode development",
+    "dev2": "vite",
+    "dev3": "tsc --esModuleInterop -t ES5 src/main/index.ts && vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@grewer/tools": "^0.1.2",
@@ -49,7 +53,9 @@
     "url-loader": "^4.0.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "@vitejs/plugin-react": "^1.0.0",
+    "vite": "^2.6.0"
   },
   "eslintConfig": {
     "extends": [
