--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/shallowequal": "^1.1.1",
     "@types/uuid": "^8.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "electron-debug": "^3.0.1",
     "eslint-plugin-react-hooks": "^3.0.0",
@@ -45,7 +46,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^7.0.5",
-    "typescript": "^4.0.0",
+    "tslib": "^2.3.1",
+    "typescript": "^3.9.10",
     "url-loader": "^4.0.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
@@ -65,11 +67,15 @@
       "jsx-a11y/click-events-have-key-events": 0,
       "jsx-a11y/no-static-element-interactions": 0,
       "no-continue": 0
-    }
+    },
+    "ignorePatterns": [
+      "webpack.config"
+    ]
   },
   "eslintIgnore": [
     "!.eslintrc.js",
-    "!.prettierrc.js"
+    "!.prettierrc.js",
+    "webpack.config.js"
   ],
   "prettier": "@grewer/eslint-config/.prettierrc.js"
 }
