--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Grewer",
   "license": "MIT",
   "scripts": {
-    "start": "tsc --esModuleInterop -t ES5 src/main/index.ts && webpack-dev-server --hot --mode development",
+    "start": "tsc --esModuleInterop -t ES5 src/main/index.ts && webpack serve --mode development",
     "dist": "webpack --mode production",
     "dev": "webpack --mode development"
   },
@@ -16,7 +16,6 @@
     "electron": "^8.2.5",
     "electron-is-dev": "^1.1.0",
     "fs-jetpack": "^2.3.0",
-    "html-webpack-plugin": "^4.0.1",
     "hypermd": "^0.3.11",
     "lokijs": "^1.5.8",
     "marked": "^0.8.2",
@@ -26,6 +25,8 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
+    "@babel/core": "^7.15.8",
     "@grewer/eslint-config": "^0.1.1",
     "@types/lokijs": "^1.5.3",
     "@types/node": "^12.12.22",
@@ -39,23 +40,22 @@
     "electron-debug": "^3.0.1",
     "eslint-plugin-react-hooks": "^3.0.0",
     "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "html-webpack-harddisk-plugin": "^1.0.1",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.4.2",
     "style-loader": "^1.1.3",
-    "ts-loader": "^8.3.0",
+    "ts-loader": "^9.2.6",
     "tslib": "^2.3.1",
     "typescript": "^4.0.0",
     "url-loader": "^4.0.0",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "eslintConfig": {
     "extends": [
-      "@grewer/eslint-config",
+      "./node_modules/@grewer/eslint-config",
       "plugin:react-hooks/recommended"
     ],
     "env": {
