--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "tsc --esModuleInterop -t ES5 src/main/index.ts && webpack serve --mode development",
     "dist": "webpack --mode production",
-    "dev": "webpack --mode development"
+    "dev": "webpack --mode development",
+    "genIcon": "npx iconfont-h5"
   },
   "dependencies": {
     "@grewer/tools": "^0.1.2",
@@ -44,6 +45,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.4.2",
+    "react-iconfont-cli": "^2.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^9.2.6",
     "tslib": "^2.3.1",
