--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@grewer/tools": "^0.1.2",
+    "@octokit/rest": "^18.12.0",
     "codemirror": "^5.52.2",
     "dotenv": "^8.2.0",
     "electron": "^8.2.5",
