--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.4.2",
-    "react-iconfont-cli": "^2.0.2",
+    "@grewer/react-iconfont-cli": "^2.0.3",
     "style-loader": "^1.1.3",
     "ts-loader": "^9.2.6",
     "tslib": "^2.3.1",
